--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -61,7 +61,7 @@ body {
   /*display:none;*/
 }
 /* Full-width input fields */
-input[type=email], input[type=text],input[type=password] {
+input[type=email],input[type=tel],select,input[type=number], input[type=text],input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -70,7 +70,7 @@ input[type=email], input[type=text],input[type=password] {
   background: #f1f1f1;
 }
 
-input[type=email]:focus,input[type=text]:focus, input[type=password]:focus {
+input[type=email]:focus,input[type=tel]:focus,input[type=number]:focus,input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
